change email address

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,5 +7,5 @@ import CopyButton from "../components/CopyButton";
 >
   <a href="https://github.com/trevortylerlee" class="">Github</a>
   <a href="https://www.linkedin.com/in/trevortylerlee/" class="">LinkedIn</a>
-  <span aria-label="email address">trevortylerlee@gmail.com</span>
+  <span aria-label="email address">t@trevortylerlee.com</span>
 </footer>
