update phished link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -44,7 +44,7 @@ const pageTitle = "Trevor Lee | Homepage";
     <h2 class="font-sans text-xl opacity-70">Projects</h2>
     <Projects
       description="Send, monitor, and track phishing emails"
-      href="https://phished.up.railway.app/"
+      href="https://github.com/phished-co/phished_web_app"
       image={phishedLogo}
       title="Phished"
     />
