--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -27,7 +27,7 @@ const { Content } = await post.render();
   pageSlug={post.slug}
   category="posts"
 >
-  <div class="-z-10 mx-auto max-w-screen-md px-2">
+  <div class="-z-10">
     {
       post.data.imageSrc ? (
         <Image
@@ -39,24 +39,20 @@ const { Content } = await post.render();
       ) : null
     }
     <div transition:name={`${post.slug}-container`}>
-      <h1
-        class="mt-6 text-center text-3xl font-bold sm:text-5xl"
-        id="postTitle"
-      >
+      <h1 class="mt-12 text-3xl font-semibold" id="postTitle">
         {post.data.title}
       </h1>
       {
         post.data.date && (
-          <p class="mb-8 mt-1 text-center sm:mt-2 sm:text-lg">
+          <span class="font-mono opacity-70">
             Posted {formatDate(post.data.date, "long")}
-          </p>
+          </span>
         )
       }
-      <hr class="hr-bg mb-8 h-0.5 border-none" />
     </div>
     <div
       id="content"
-      class="prose mx-auto mb-12 max-w-none prose-strong:text-inherit"
+      class="prose mx-auto mb-12 mt-8 prose-strong:text-inherit"
     >
       <Content />
     </div>
