--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -1,9 +1,8 @@
 ---
-import { formatDate, isWithinLastFortnite } from "../lib/utils";
 const { href, title, description } = Astro.props;
 ---
 
-<li class="list-none font-mono">
+<li class="list-none font-mono hover:bg-gray-2 dark:hover:bg-gray-10">
   <a href={href}>
     <span
       class="flex items-center border-b border-gray-5 py-3 text-content dark:border-gray-9"
