delete unused photos, remove br, use atkinson

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,5 +1,8 @@
 ---
 import "../styles/global.css";
+import "@fontsource/atkinson-hyperlegible/400.css";
+import "@fontsource/atkinson-hyperlegible/700.css";
+
 import Navigation from "../components/Navigation.astro";
 
 const { pageTitle, pageSlug, category } = Astro.props;
