--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,6 +2,8 @@
 import BaseLayout from "src/layouts/BaseLayout.astro";
 import { Image } from "astro:assets";
 
+import Stopwatch from "@components/Stopwatch.astro";
+
 import profilePicture from "@assets/me-with-roxy.webp";
 ---
 
@@ -11,8 +13,11 @@ import profilePicture from "@assets/me-with-roxy.webp";
       src={profilePicture}
       format="avif"
       quality={"med"}
-      alt="A picture of young me with my dog Roxy."
+      alt="Young me with my dog Roxy."
       class="mx-auto max-w-xs"
     />
+    <div class="mx-auto max-w-xs p-4">
+      <Stopwatch />
+    </div>
   </div>
 </BaseLayout>
