--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -16,8 +16,9 @@ import profilePicture from "@assets/me-with-roxy.webp";
       alt="Young me with my dog Roxy."
       class="mx-auto max-w-xs"
     />
-    <div class="mx-auto max-w-xs p-4">
+    <div class="mx-auto max-w-xs p-4 font-mono">
       <Stopwatch />
+       ago
     </div>
   </div>
 </BaseLayout>
