--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -9,6 +9,7 @@ import profilePicture from "@assets/me-with-roxy.webp";
   <span class="mt-12 flex flex-col">
     <a href="https://github.com/trevortylerlee" class="">Github</a>
     <a href="https://www.linkedin.com/in/trevortylerlee/" class="">LinkedIn</a>
+    <a href="https://twitter.com/boogerbuttcheek">X (formerly Twitter)</a>
     <a href="mailto: t@trevortylerlee.com">t@trevortylerlee.com</a>
   </span>
 </BaseLayout>
