--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,7 +8,7 @@ import profilePicture from "@assets/me-with-roxy.webp";
 ---
 
 <BaseLayout pageTitle="About" pageSlug="/about">
-  <div class="mx-auto max-w-screen-md py-16 text-center">
+  <div class="mx-auto max-w-screen-md pb-12 pt-16 text-center">
     <Image
       src={profilePicture}
       format="avif"
@@ -21,4 +21,17 @@ import profilePicture from "@assets/me-with-roxy.webp";
        ago
     </div>
   </div>
+  <br />
+  <span class="flex items-baseline justify-evenly">
+    <img
+      src="https://img.pokemondb.net/sprites/black-white/anim/back-normal/turtwig.gif"
+      alt="Turtwig"
+      class="relative top-7 h-[43px] w-[34px]"
+    />
+    <img
+      src="https://img.pokemondb.net/sprites/black-white/anim/normal/giratina-origin.gif"
+      alt="Giratina"
+      class=""
+    />
+  </span>
 </BaseLayout>
