--- a/src/pages/🌐.astro
+++ b/src/pages/🌐.astro
@@ -3,6 +3,6 @@ import BaseLayout from "src/layouts/BaseLayout.astro";
 import { Image } from "astro:assets";
 ---
 
-<BaseLayout pageTitle="About" pageSlug="/about">
+<BaseLayout pageTitle="🌐" pageSlug="/🌐">
   <div class="mx-auto max-w-screen-md pb-12 pt-16 text-center">so empty</div>
 </BaseLayout>
