--- a/src/pages/🌐.astro
+++ b/src/pages/🌐.astro
@@ -1,8 +1,9 @@
 ---
 import BaseLayout from "src/layouts/BaseLayout.astro";
-import { Image } from "astro:assets";
 ---
 
 <BaseLayout pageTitle="🌐" pageSlug="/🌐">
-  <div class="mx-auto max-w-screen-md pb-12 pt-16 text-center">so empty</div>
+  <div class="mx-auto max-w-screen-md pb-12 pt-16 text-center">
+    not much here
+  </div>
 </BaseLayout>
