--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,11 +1,8 @@
 ---
 import BaseLayout from "src/layouts/BaseLayout.astro";
-import { Image } from "astro:assets";
-
-import profilePicture from "@assets/me-with-roxy.webp";
 ---
 
-<BaseLayout pageTitle="About" pageSlug="/about">
+<BaseLayout pageTitle="Contact" pageSlug="/contact">
   <span class="mt-12 flex flex-col">
     <a href="https://github.com/trevortylerlee" class="">Github</a>
     <a href="https://www.linkedin.com/in/trevortylerlee/" class="">LinkedIn</a>
