--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,7 +1,7 @@
 ---
-import BaseLayout from "../layouts/BaseLayout.astro";
+import BaseLayout from "src/layouts/BaseLayout.astro";
 
-const pageTitle = "Trevor Lee | Homepage";
+const pageTitle = "uh oh";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
