--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -1,10 +1,10 @@
 ---
-import { getCollection } from "astro:content";
-import BaseLayout from "../../layouts/BaseLayout.astro";
+import BaseLayout from "src/layouts/BaseLayout.astro";
 import Comments from "@components/Comments";
+import { formatDate } from "src/lib/utils";
+import { getCollection } from "astro:content";
 import { Image } from "astro:assets";
-import styles from "../../styles/CodeBlock.module.css";
-import { formatDate } from "../../lib/utils";
+import styles from "src/styles/CodeBlock.module.css";
 
 export async function getStaticPaths() {
   const allPosts = await getCollection("posts");
@@ -17,7 +17,7 @@ export async function getStaticPaths() {
   }));
 }
 
-const { post } = Astro.props;
+const { post } = Astro.props as any;
 const { Content } = await post.render();
 ---
 
