--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,8 +16,8 @@ const pageTitle = "Trevor Lee | Homepage";
 <BaseLayout pageTitle={pageTitle}>
   <span class="mt-12 flex font-sans text-xl font-semibold">Projects</span>
   <span class="flex border-b border-gray-5 py-2 font-mono dark:border-gray-9">
-    <span class="w-[120px] opacity-70">date</span><span class="opacity-70"
-      >title</span
+    <span class="w-[120px] opacity-70">title</span><span class="opacity-70"
+      >description</span
     >
   </span>
   <ul>
