click spark from ryan mulligan

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,6 +1,8 @@
 <nav class="py-3 text-center">
   <span>
-    <a href="/" class="text-[26px] font-semibold">TREVOR LEE</a>
+    <span data-sparks class="cursor-default text-[26px] font-semibold"
+      >TREVOR LEE</span
+    >
   </span>
   <span class="flex justify-center gap-3 font-mono">
     <a href="/">Home</a>
